working in modale

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </main>
           <!--Modal-->
           <div class="modal-container-hed">
-            <div class="modal-container hidden" id="modal">
+            <div class="modal-container" id="modal">
               <div class="modal-header">
                 <h3>Sign Up</h3>
         <button class="close-btn" id="close"><ion-icon name="close-outline"></ion-icon></button>
